# v-c-crypto

./: .gitignore  Makefile  README.md  config.h.in  doxygen.cfg  meson.build
include/vccrypt/: block_cipher.h  buffer.h  compare.h  digital_signature.h  error_codes.h  function_decl.h  hash.h  inline_support.h  interfaces.h  key_agreement.h  key_derivation.h  mac.h  mock_suite.h  os.h  padding.h  prng.h  stream_cipher.h  suite.h  version.h
src/block_cipher/: block_cipher_private.h  vccrypt_aes_cbc_alg_decrypt.c  vccrypt_aes_cbc_alg_dispose.c  vccrypt_aes_cbc_alg_encrypt.c  vccrypt_aes_cbc_alg_init.c  vccrypt_aes_cbc_alg_options_dispose.c  vccrypt_aes_cbc_alg_options_init.c  vccrypt_block_decrypt.c  vccrypt_block_encrypt.c  vccrypt_block_init.c  vccrypt_block_options_init.c  vccrypt_block_register_AES_256_2X_CBC.c  vccrypt_block_register_AES_256_3X_CBC.c  vccrypt_block_register_AES_256_4X_CBC.c  vccrypt_block_register_AES_256_CBC_FIPS.c
src/buffer/: concrete_inline_impls.c  vccrypt_buffer_copy.c  vccrypt_buffer_dispose.c  vccrypt_buffer_init.c  vccrypt_buffer_init_for_base64_serialization.c  vccrypt_buffer_init_for_hex_serialization.c  vccrypt_buffer_move.c  vccrypt_buffer_read_base64.c  vccrypt_buffer_read_data.c  vccrypt_buffer_read_hex.c  vccrypt_buffer_write_base64.c  vccrypt_buffer_write_hex.c
src/compare/: crypto_memcmp.c
src/digital_signature/: vccrypt_digital_signature_init.c  vccrypt_digital_signature_keypair_create.c  vccrypt_digital_signature_options_init.c  vccrypt_digital_signature_register_ed25519.c  vccrypt_digital_signature_sign.c  vccrypt_digital_signature_verify.c
src/hash/: vccrypt_hash_digest.c  vccrypt_hash_finalize.c  vccrypt_hash_init.c  vccrypt_hash_options_init.c  vccrypt_hash_register_SHA_2_384.c  vccrypt_hash_register_SHA_2_512.c  vccrypt_hash_register_SHA_2_512_256.c
src/key_agreement/: key_agreement_common.h  vccrypt_key_agreement_init.c  vccrypt_key_agreement_keypair_create.c  vccrypt_key_agreement_long_term_secret_create.c  vccrypt_key_agreement_options_init.c  vccrypt_key_agreement_register_curve25519_plain.c  vccrypt_key_agreement_register_curve25519_sha512.c  vccrypt_key_agreement_register_curve25519_sha512_256.c  vccrypt_key_agreement_short_term_secret_create.c  vccrypt_key_agreement_short_term_secret_create_common.c
src/key_derivation/: vccrypt_key_derivation_derive_key.c  vccrypt_key_derivation_init.c  vccrypt_key_derivation_options_init.c  vccrypt_key_derivation_register_pbkdf2.c
src/mac/: concreate_inline_impls.c  hmac.h  vccrypt_hmac_digest.c  vccrypt_hmac_finalize.c  vccrypt_hmac_init.c  vccrypt_mac_digest.c  vccrypt_mac_finalize.c  vccrypt_mac_init.c  vccrypt_mac_options_init.c  vccrypt_mac_register_SHA_2_512_256_HMAC.c  vccrypt_mac_register_SHA_2_512_HMAC.c
src/padding/: vccrypt_buffer_pad.c  vccrypt_buffer_reverse_pad.c
src/prng/: vccrypt_prng_init.c  vccrypt_prng_options_init.c  vccrypt_prng_read.c  vccrypt_prng_read_c.c  vccrypt_prng_read_uuid.c  vccrypt_prng_register_source_operating_system.c  vccrypt_prng_source_os.h
src/stream_cipher/: stream_cipher_private.h  vccrypt_aes_ctr_alg_continue_decryption.c  vccrypt_aes_ctr_alg_continue_encryption.c  vccrypt_aes_ctr_alg_dispose.c  vccrypt_aes_ctr_alg_encrypt.c  vccrypt_aes_ctr_alg_init.c  vccrypt_aes_ctr_alg_options_dispose.c  vccrypt_aes_ctr_alg_options_init.c  vccrypt_aes_ctr_alg_start_decryption.c  vccrypt_aes_ctr_alg_start_encryption.c  vccrypt_aes_ctr_incr.c  vccrypt_stream_continue_decryption.c  (+11 more)
subprojects/: vpr.wrap
(+142 files in other folders)
